--- a/Day 01 - Regex/thực hành kiểm tra mã quốc gia/index.html
+++ b/Day 01 - Regex/thực hành kiểm tra mã quốc gia/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>JavaScript function to check whether a given value is US zip code or not</title>
 </head>
+
 <body>
-    <script src="./script.js"></script>
+    <script src="./script.js">
+    </script>
 </body>
 </html>
